# AskMeBot

./: .gitignore  LICENSE  README.md  deploy.sh  health-check.sh  index.html  pyproject.toml  requirements.txt  setup-github-pages.md  test.ipynb  test_app.py  test_chat.html  vercel.json
.github/workflows/: deploy.yml
app/: chat_parser.py  context_manager.py  deep_research.py  groq_router.py  langgraph_research.py  main.py  mirix_memory.py
chatbot_testFiles/: README.md  config.py  main.py  requirements.txt  version.txt
fastapitut/: main.py
fastapitut/models/: message.py
fastapitut/routers/: chat.py
static/: index.html
